[tool.poetry]
name = "dsa_python"
version = "0.1.0"
description = "Data Structures And Algorithms in Python"
authors = ["Anil Kulkarni (Octallium)"]
readme = "README.md"
packages = [{include = "dsa_python", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
ipython = "^8.14.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
]
pythonpath = "."
